# nes-tab5-usb-host

./: .gitignore  BATTERY_MONITOR.md  CMakeLists.txt  README.md  USB_HOST_GUIDE.md  WEBFLASHER_READY.md  WEBFLASHER_SETUP.md  battery_power.txt  ina226.txt  index.html  manifest-three-files.json  manifest.json  partitions.csv  sdkconfig.defaults
components/battery_monitor/: CMakeLists.txt
components/battery_monitor/include/: battery_monitor.h
components/battery_monitor/src/: battery_monitor.c
components/espressif__esp_lcd_st7703/: esp_lcd_st7703.c
components/m5stack_tab5/: CMakeLists.txt  esp_lcd_st7123.c  idf_component.yml  m5stack_tab5.c
components/m5stack_tab5/include/bsp/: display.h
components/nes_emulator/: CMakeLists.txt  idf_component.yml
components/nes_emulator/include/: nes_osd.h
components/nes_emulator/nofrendo/: bitmap.c  bitmap.h  config.c  gui.c  memguard.c  noftypes.h  pcx.c  pcx.h  vid_drv.c
components/nes_emulator/nofrendo/libsnss/: libsnss.c  libsnss.h
components/nes_emulator/nofrendo/nes/: nes.c  nes_ppu.c  nes_rom.c  nesstate.c
components/nes_emulator/nofrendo/sndhrdw/: nes_apu.c
components/nes_emulator/src/: nes_osd.c
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
release_binaries/: FLASHING_INSTRUCTIONS.md
webflasher/: QUICK_START.md  README.md  SETUP.md  index.html  manifest-three-files.json  manifest.json
